added select_all, changed some styles and attrs

--- a/index.html
+++ b/index.html
@@ -7,12 +7,74 @@
     <script src="select-component.js"></script>
 </head>
 <body>
-    <select is="select-component" name="select[]" multiple>
+    <select is="select-component" multiple selectall search>
         <option value="1">option 1</option>
         <option value="2">option 2</option>
         <option value="3">option 3</option>
         <option value="4">option 4</option>
         <option value="5">option 5</option>
+        <option value="6">option 6</option>
+        <option value="7">option 7</option>
+        <option value="8">option 8</option>
+        <option value="9">option 9</option>
+        <option value="10">option 10</option>
+        <option value="10">option 11</option>
+        <option value="10">option 12</option>
+    </select>
+
+    <select is="select-component" multiple selectall>
+        <option value="1">option 1</option>
+        <option value="2">option 2</option>
+        <option value="3">option 3</option>
+        <option value="4">option 4</option>
+        <option value="5">option 5</option>
+        <option value="6">option 6</option>
+        <option value="7">option 7</option>
+        <option value="8">option 8</option>
+        <option value="9">option 9</option>
+        <option value="10">option 10</option>
+        <option value="10">option 11</option>
+        <option value="10">option 12</option>
+    </select>
+
+    <select is="select-component" multiple search>
+        <option value="1">option 1</option>
+        <option value="2">option 2</option>
+        <option value="3">option 3</option>
+        <option value="4">option 4</option>
+        <option value="5">option 5</option>
+        <option value="6">option 6</option>
+        <option value="7">option 7</option>
+    </select>
+
+    <select is="select-component" multiple>
+        <option value="1">option 1</option>
+        <option value="2">option 2</option>
+        <option value="3">option 3</option>
+        <option value="4">option 4</option>
+        <option value="5">option 5</option>
+        <option value="6">option 6</option>
+        <option value="7">option 7</option>
+    </select>
+
+    <select is="select-component" search>
+        <option value="1">option 1</option>
+        <option value="2">option 2</option>
+        <option value="3">option 3</option>
+        <option value="4">option 4</option>
+        <option value="5">option 5</option>
+        <option value="6">option 6</option>
+        <option value="7">option 7</option>
+    </select>
+
+    <select is="select-component">
+        <option value="1">option 1</option>
+        <option value="2">option 2</option>
+        <option value="3">option 3</option>
+        <option value="4">option 4</option>
+        <option value="5">option 5</option>
+        <option value="6">option 6</option>
+        <option value="7">option 7</option>
     </select>
 </body>
 </html>
