adding styles via SelectComponent.styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Component</title>
     <script src="select-component.js"></script>
+    <script>
+        // SelectComponent.styles = `
+        //     .option.selected {
+        //         background: #000;
+        //     }
+        // `;
+    </script>
 </head>
 <body>
     <select is="select-component" multiple selectall search selected-options=".selected-options">
